--- a/src/main/webapp/resources/css/loginAndJoin.css
+++ b/src/main/webapp/resources/css/loginAndJoin.css
@@ -66,7 +66,7 @@ button{border: none;cursor: pointer;width:80px;}
 .email_input_01{width:100px;}
 .email_input_02, #emailAuth{width:150px;}
 checkEmailAuth {padding: 0 0 10px;}
-#emailBtn, #emailAuthBtn, #nickNameCheck{padding: 5px 10px!important;
+#emailBtn, #emailAuthBtn, #nickNameCheck, #phoneNumCheck{padding: 5px 10px!important;
     font-size: 14px!important;
     vertical-align: initial!important;
     cursor: pointer!important;
