--- a/src/main/webapp/resources/css/loginAndJoin.css
+++ b/src/main/webapp/resources/css/loginAndJoin.css
@@ -66,7 +66,8 @@ button{border: none;cursor: pointer;width:80px;}
 .email_input_01{width:100px;}
 .email_input_02, #emailAuth{width:150px;}
 checkEmailAuth {padding: 0 0 10px;}
-#emailBtn, #emailAuthBtn, #nickNameCheck, #phoneNumCheck{padding: 5px 10px!important;
+#emailBtn, #emailAuthBtn, #nickNameCheck, #phoneNumCheck{
+	padding: 5px 10px!important;
     font-size: 14px!important;
     vertical-align: initial!important;
     cursor: pointer!important;
@@ -79,6 +80,25 @@ checkEmailAuth {padding: 0 0 10px;}
     color:#fff;
     background-color:#59bfbf;
     cursor: pointer!important;;
+}
+.basic_img{
+	width:150px;
+	height:150px;
+}
+#register_Btn{
+	margin : 0 40px!important;
+	padding: 7px 12px!important;
+    font-size: 13px!important;
+    vertical-align: initial!important;
+    cursor: pointer!important;
+}
+.profile{
+	margin:10px 100px;
+}
+.info_profile{
+	margin-left : 60px!important;
+	font-size : 12px;
+	color : gray;
 }
 .company-box{margin-bottom:60px;}
 .sns_login_button{display: flex;align-items: center;justify-content: center;}
