--- a/src/main/webapp/resources/css/chat/chatList.css
+++ b/src/main/webapp/resources/css/chat/chatList.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 @import url(//fonts.googleapis.com/earlyaccess/jejugothic.css);
 
+body {
+	overflow-x:hidden; 
+}
+
 #main {
 	position:absolute;
 	right:0;
@@ -24,16 +28,18 @@
 }
 
 .sidebar {
-	font-family: 'Jeju Gothic', sans-serif;
+	overflow-x:hidden;
+	z-index:9999;
 	font-size: 0.8rem;
 	height: 100%;
 	width: 0;
 	position: absolute;
 	top: 0;
 	right: 0;
-	background-color: rgba(226, 226, 226, 0.5);
+	background-color: #F0F0F0;
 	overflow-x: hidden;
 	transition: 0.5s;
+	border: 1px ridge #26274c;
 }
 
 .sidebar .closebtn {
@@ -91,6 +97,11 @@
 	background-color: #59bfbf;
 	color: #ffffff;
 	min-width: 120px;
+}
+
+#mkChatBtn {
+	cursor:pointer; 
+	
 }
 
 #chatList {
