--- a/src/main/webapp/resources/css/chat/chatRoomPage.css
+++ b/src/main/webapp/resources/css/chat/chatRoomPage.css
@@ -46,9 +46,9 @@ body {
 	height: 0;
 }
 
-.chat-list .chat-message h5 {
+.chat-list .chat-message {
 	margin: 0 0 5px 0;
-	font-weight: 600;
+	font-weight: 100;
 	line-height: 100%;
 	font-size: .9rem;
 }
