--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -5,7 +5,9 @@
 	margin: 0px;
 	padding: 0px;
 }
-
+.side_show{
+	left: 0!important;
+}
 .main_box {
 	background-color: #ffffff;
 	width: 100%;
@@ -97,18 +99,16 @@
 }
 
 .sidenav {
-	height: 100%; /* 100% Full-height */
-	width: 0; /* 0 width - change this with JavaScript */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Stay on top */
-	top: 0; /* Stay at the top */
-	left: 0;
+	position: fixed;
+	width: 360px;
+    top: 0;
+    left: -360px;
+    height: 100%;
+    z-index: 9999;
 	background-color: rgba(226, 226, 226, 0.8);
 	overflow-x: hidden; /* Disable horizontal scroll */
 	padding-top: 1px; /* Place content 60px from the top */
-	transition: 0.5s;
-	/* 0.5 second transition effect to slide in the sidenav */
-	border: 1px solid;
+	transition: all 0.5s;
 }
 
 /* The navigation menu links */
@@ -124,6 +124,15 @@
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
 	color: #26274c;
+}
+
+.side_overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0);
+    z-index: 998;
+    display: none;
 }
 
 /* Position and style the close button (top right corner) */
@@ -221,4 +230,35 @@
 
 #myMenu button:hover {
 	color: #e7438b;
+}
+
+.menuBtn-wrap{position: relative;}
+.msgAlert{
+	position: absolute;
+    background: #e7438b;
+    z-index: 9999;
+    left: 0;
+    right: 0;
+    width: 25px;
+    bottom: -15px;
+    margin: auto;
+    border-radius: 3px;
+}
+.msgAlert:after{
+	content: "";
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    top: -5px;
+    left: 8px;
+    border-bottom: 5px solid #e7438b;
+    border-right: 5px solid transparent;
+    border-left: 5px solid transparent;
+}
+.msgAlert p{
+	padding: 6px;
+    margin: 0;
+    font-size: 13px;
+    line-height: 10px;
+    font-weight: bold;
 }
