혜인 - 마이페이지 프론트 전체수정, 닉네임 중복 체크확인, 프로필업로드 기본 이미지 변경 등 커

--- a/src/main/webapp/resources/css/loginAndJoin.css
+++ b/src/main/webapp/resources/css/loginAndJoin.css
@@ -82,8 +82,9 @@ checkEmailAuth {padding: 0 0 10px;}
     cursor: pointer!important;;
 }
 .basic_img{
-	width:150px;
-	height:150px;
+	width:60%;
+	height:60%;
+	border-radius:50%;
 }
 #register_Btn{
 	margin : 0 40px!important;
