--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,61 +1,53 @@
 @charset "UTF-8";
 
+/* 공통 스타일 */
 * {
 	font-family: "윤고딕540";
 	margin: 0px;
 	padding: 0px;
 }
-.side_show{
-	left: 0!important;
+/* 공통 스타일 */
+
+#headerMain{
+	height: 90px;
+    border-bottom: 1px solid #ddd;
+    display: flex;
+    justify-content: center;
 }
-.main_box {
+#headerMain .main_box {
 	background-color: #ffffff;
-	width: 100%;
-	height: 70px;
-	margin: 0 auto;
-	text-align: center;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.common {
-	display: inline-table;
-	background-color: white;
-	font-size: 20px;
-	width: 200px;
-	height: 50px;
-	position: relative;
-	top: 10px;
+#headerMain .common {font-size: 20px;}
+#headerMain .menu, #headerMain .logo, #headerMain .login{width:30%;}
+#headerMain .login{padding: 8px 15px;}
+#headerlogo {
+	max-width: 22%;
+    height: auto;
+    text-align: center;
 }
 
-.content {
-	display: table-cell;
-	text-align: center;
-	vertical-align: middle;
+#headerLogin {
+	max-width: 80%;
 }
-
-.menu {
-	float: left;
-}
-
-.login {
-	float: right;
-	width: 200px;
-}
-
 #loginNickname {
 	font-size: 80%;
 	color: #26274c;
 }
 
-#headerLogin {
-	margin-right: 20px;
+.side_show{
+	left: 0!important;
 }
-
 .navbar-toggle {
 	position: relative;
 	padding: 10px;
-	margin-top: 8px;
-	margin-right: 15px;
-	margin-bottom: 8px;
+	margin: 8px 15px;
 	background-color: white;
 	background-image: none;
 	border: 1px solid transparent;
@@ -77,18 +69,6 @@
 .navbar-toggle .icon-bar+.icon-bar {
 	cursor: pointer;
 	margin-top: 4px;
-}
-
-#headerlogo {
-	max-width: 30%;
-	height: auto;
-	padding-top: 5px;
-}
-
-#headerLogin {
-	max-width: 80%;
-	height: auto;
-	padding-top: 7px;
 }
 
 .headerMenu1 {
