--- a/src/main/webapp/resources/css/login_join/loginAndJoin.css
+++ b/src/main/webapp/resources/css/login_join/loginAndJoin.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 
 /* login / Join 공통 */
-.input-title{font-weight:bold; font-size:16px; color:#59bfbf; width:150px}
 .required{color:#e7438b;margin-right: 10px;}
 .lg-inputBox{width: 280px;}
 button:focus{outline: initial!important;}
@@ -102,8 +101,6 @@ button:focus{outline: initial!important;}
 span img{
 	max-width:100%;
 }
-	
-/* login 여기까지 */
 
 
 	/*
@@ -186,7 +183,7 @@ span img{
 	}
 #findMyEmail .uPhone_2.custom-select, #findMyEmail .uPhone_3.custom-select{
 	background: initial!important;
-    width: 70px!important;
+    width: 100px!important;
     padding: 0 0.75em!important;
 }
 #findMyEmail .findEmailBtnWrap{
@@ -358,16 +355,45 @@ span img{
 	display: inline-block;
 	margin: 10px 0 20px;
 }
-.joinForm-wrapper table td {padding: 10px 0;}
-.email_input_01{width:100px;}
-.email_input_02, #emailAuth{width:150px;}
-checkEmailAuth {padding: 0 0 10px;}
-#emailBtn, #emailAuthBtn, #nickNameCheck, #phoneNumCheck{
+.sc-registerForm .joinTable{
+	margin: 0 auto;
+}
+.sc-registerForm .joinTable .input-title{
+	font-weight: bold;
+    font-size: 16px;
+    color: #59bfbf;
+    width: 25%;
+}
+.sc-registerForm .joinTable td{
+	padding: 20px 0;
+    width: 70%;
+}
+.idInputBox input, .pwInputBox input, .nickInputBox input, .phoneInputBox input{
+	border: 1px solid rgba(0,0,0,.15);
+    border-radius: .25rem;
+    padding: 0 1.75rem 0 .75rem!important;
+    background-color: white;
+    height: calc(2rem)!important;
+}
+.email_input_01{
+	width:120px;
+}
+.email_input_02, #emailAuth{
+	width:150px;
+}
+.checkEmailAuth {padding: 0 0 10px;}
+.emailBtn,.emailCheckBtn,.nickCheckBtn,.phoneCheckBtn{
 	padding: 5px 10px!important;
     font-size: 14px!important;
     vertical-align: initial!important;
     cursor: pointer!important;
-    margin: 0 10px;}
+    margin: 0 10px;
+    width: 100px;
+    background: #59bfbf;
+    color: #fff;
+    border: initial;
+    border-radius: 10px;
+}
 .btn-submit{
 	width: 280px!important;
     border-radius: 15px!important;
@@ -377,9 +403,59 @@ checkEmailAuth {padding: 0 0 10px;}
     background-color:#59bfbf;
     cursor: pointer!important;;
 }
+
+.profileInputBox th{
+	vertical-align: top!important;
+    padding-top: 40px!important;
+}
+.profile{
+	max-width: 320px;
+    position: relative;
+    text-align: center;
+}
 .basic_img{
-	width:30%;
+	width:40%;
 	border-radius:50%;
+}
+.choosePick{
+	text-align: center;
+    max-width: 400px;
+    margin-top: 5px;
+}
+.choosePick #file_route{
+	vertical-align: middle;
+    display: block;
+    width: 300px;
+    line-height: 28px;
+    font-size: 11px;
+    padding: 0;
+    border: 0;
+    margin: 0 auto;
+    box-shadow: 0 0 black;
+    text-align: center;
+}
+.choosePick label{
+	padding: 5px 10px!important;
+    font-size: 14px!important;
+    vertical-align: initial!important;
+    cursor: pointer!important;
+    width: 100px;
+    background: #59bfbf;
+    color: #fff;
+    border: initial;
+    border-radius: 10px;
+    text-align: center;
+}
+.choosePick label input{
+	position: absolute;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+}
+.info_profile{
+	font-size: 12px;
+    color: gray;
+    margin: 10px 0 0;
 }
 #register_Btn{
 	margin : 0 40px!important;
@@ -387,14 +463,6 @@ checkEmailAuth {padding: 0 0 10px;}
     font-size: 13px!important;
     vertical-align: initial!important;
     cursor: pointer!important;
-}
-.profile{
-	margin:10px 100px;
-}
-.info_profile{
-	margin-left : 60px!important;
-	font-size : 12px;
-	color : gray;
 }
 .company-box{margin-bottom:60px;}
 .sns_login_button{display: flex;align-items: center;justify-content: center;}
