--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -132,6 +132,7 @@
     background: rgba(0, 0, 0, 0);
     z-index: 998;
     display: none;
+    top:0;
 }
 
 /* Position and style the close button (top right corner) */
